Refactor app to multi layer design
