# router/main.go
@@ -2,6 +2,7 @@ package router
 
 import (
 	"github.com/bmdavis419/go-backend-template/handlers"
+	"github.com/bmdavis419/go-backend-template/middlewares"
 	"github.com/gofiber/fiber/v2"
 )
 
@@ -10,9 +11,9 @@ func SetupRoutes(app *fiber.App) {
 
 	// setup the todos group
 	todos := app.Group("/todos")
-	todos.Get("/", handlers.HandleAllTodos)
-	todos.Post("/", handlers.HandleCreateTodo)
-	todos.Put("/:id", handlers.HandleUpdateTodo)
-	todos.Get("/:id", handlers.HandleGetOneTodo)
-	todos.Delete("/:id", handlers.HandleDeleteTodo)
+	todos.Post("/", handlers.CreateTodo)
+	todos.Get("/", handlers.GetAllTodos)
+	todos.Get("/:id", middlewares.ParseObjectId, handlers.GetTodoById)
+	todos.Put("/:id", middlewares.ParseObjectId, handlers.UpdateTodo)
+	todos.Delete("/:id", middlewares.ParseObjectId, handlers.DeleteTodo)
 }
